--- a/matroid/slide.tex
+++ b/matroid/slide.tex
@@ -17,7 +17,7 @@
 %\usepackage{minted}
 \usepackage{listings}
 \usetikzlibrary{arrows,shapes}
-\graphicspath{{images/}}
+\graphicspath{}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
 %%packages to make fixed-position textboxes
